Alignment issues fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,7 +168,7 @@ p {
   background-color: rgb(179, 6, 25);
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1199px) {
   .btn-green {
     background-color: rgb(9, 208, 183);
     //font-family: "komet",sans-serif;
@@ -203,7 +203,7 @@ p {
 .btn {
   color: #fff;
   border-radius: 5px;
-  padding: 9px 27px;
+  padding: 9px 15px;
 }
 
 .btn-small {
